# digsim

./: .gitignore  CHANGELOG.md  LICENSE.md  MANIFEST.in  README.md  create_dist_pkg.sh  example_circuit.py  example_clock.py  example_json_component.py  example_ms_jk.py  example_pulse.py  example_sr.py  main.py  noxfile.py  pyproject.toml  run_app_in_venv.sh  setup.cfg  test_pypi_in_venv.sh  uv_pypi_install_and_run.sh  uv_ruff.sh  uv_run_app.sh  uv_run_test.sh
.github/workflows/: install.yaml  install_and_test.yaml  install_and_test_win.yaml  nox.yaml  pylint.yml  pytest.yaml  ruff.yaml
circuit/: _circuit.py
components/: __init__.py  _base.py  _button.py  _gates.py  _json_component.py  _led.py
components/gates/: __init__.py  _gates.py
digsim/: __init__.py  __main__.py  _base.py  _button.py  _circuit.py  _clock.py  _component.py  _enum.py  _gates.py  _hex_digit.py  _hexdigit.py  _json_component.py  _led.py  _on_off_switch.py  _port.py  _power.py  _waves_writer.py
digsim/app/: __main__.py
digsim/app/gui/: __init__.py  _main_window.py
digsim/app/model/: __init__.py  _model.py  _placed_component.py  _placed_hexdigit.py  _placed_wire.py
digsim/gui/: main_window.py
docs/: documentation.md
example_circuits/: 74162_counter.circuit  buzzers.circuit  counter_yosys_netlist.circuit  counter_yosys_verilog.circuit  shift_register.circuit  tiny_tapout.circuit  tiny_tapout_yosys_netlist.circuit  tiny_tapout_yosys_verilog.circuit  yosys_counter.circuit
examples/: example_circuit.json  example_circuit.py  example_clock.py  example_json_component.py  example_pulse.py  example_sr.py  example_yosys_6502.py  example_yosys_component.py
examples/load_save/: example_load_circuit.py  example_save_circuit.py  pulse_circuit.json
examples/pytest_tb/: alu.v  test_alu_testbench.py  test_up_down_counter_testbench.py  up_down_counter.v
examples/synthesis/: example_synthesis.py  fibonacci.json  fibonacci.v
examples/tiny_tapeout/: demodesign.v  synth.sh  tinetapeout.json
examples/yosys_6502/: 6502.json  code.s  compile.sh  example_yosys_6502.py  sbc.cfg
examples/yosys_counter/: counter.json  counter.v  example.circuit  example_yosys_counter.py  example_yosys_counter_netlist.py  example_yosys_counter_verilog.py  synth.sh
json_modules/: counter.json  counter.v  counter.ys
src/digsim/: __init__.py  _button.py  _circuit.py  _clock.py  _gates.py  _hexdigit.py  _json_component.py  _led.py  _on_off_switch.py  _power.py
src/digsim/app/: __init__.py  __main__.py  cli.py
src/digsim/app/gui/: __init__.py  _circuit_area.py  _component_selection.py  _component_settings.py  _main_window.py  _old.py  _old.txt  _top_bar.py  _utils.py  _warning_dialog.py
src/digsim/app/gui_object/: __init__.py  _placed_component.py  _placed_component_factory.py  _placed_hexdigit.py  _placed_wire.py
src/digsim/app/gui_objects/: __init__.py  _bus_bit_object.py  _buzzer_object.py  _component_context_menu.py  _component_item.py  _component_object.py  _component_port_item.py  _dip_switch_object.py  _gui_note_object.py  _gui_object.py  _gui_object_factory.py  _hexdigit_object.py  _image_objects.py  _label_object.py  _logic_analyzer_object.py  _seven_segment_object.py  _shortcut_objects.py  _wire_object.py  _yosys_object.py
src/digsim/app/model/: __init__.py  _model.py  _model_components.py  _model_new_wire.py  _model_objects.py  _model_settings.py  _model_shortcuts.py  _model_wires.py  _placed_bus_bit.py  _placed_component.py  _placed_component_factory.py  _placed_hexdigit.py  _placed_image_component.py  _placed_object.py  _placed_seven_segment.py  _placed_wire.py  _placed_yosys.py
src/digsim/app/settings/: __init__.py  _component_settings.py  _gui_settings.py  _shortcut_dialog.py
src/digsim/circuit/: __init__.py  _circuit.py  _waves_writer.py
src/digsim/circuit/components/: __init__.py  _bus_bits.py  _button.py  _buzzer.py  _clock.py  _dip_switch.py  _flip_flops.py  _gates.py  _hexdigit.py  _ic.py  _label_wire.py  _led.py  _logic_analyzer.py  _mem64kbyte.py  _memstdout.py  _note.py  _on_off_switch.py  _power.py  _seven_segment.py  _static_level.py  _static_value.py  _yosys_atoms.py  _yosys_component.py
src/digsim/circuit/components/atoms/: __init__.py  _component.py  _digsim_exception.py  _enum.py  _port.py
src/digsim/circuit/components/ic/: 74162.json  7448.json
src/digsim/storage_model/: __init__.py  _app.py  _circuit.py
src/digsim/synth/: __init__.py  __main__.py  _synthesis.py
src/digsim/utils/: __init__.py  _yosys_netlist.py
tests/: run_tests.sh  test_flipflops.py  test_gates.py  test_yosys_aldff.py  test_yosys_dff.py  test_yosys_dlatch.py  test_yosys_gates.py  test_yosys_latch.py  test_yosys_netlist.py  test_yosys_sdff.py  test_yosys_sr.py  test_yosys_synth.py  utilities.py
tests/verilog/: another_module.v  module_with_error.v  multiple_modules.v  one_module.v
verilog/: 7448.v  SOURCES.md  synth.sh
verilog/6502/: addsub.v
verilog/74xx/: 7448.v
yosys_modules/: 6502.json
