[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "digsim-logic-simulator"
description = "Interactive Digital Logic Simulator"
version = "0.2.0"
authors = [{name = "Fredrik Andersson", email = "freand@gmail.com"}]
maintainers =  [{name = "Fredrik Andersson", email = "freand@gmail.com"}]
readme = "README.md"
license = { file = "LICENSE.md" }
urls = { homepage = "https://github.com/freand76/digsim" }

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
]

requires-python = ">=3.8"
dependencies = [
  "pyvcd>=0.3.0",
  "pyside6>=6.6.0",
  "pexpect==4.8.0",
  "qtawesome",
  "yowasp-yosys==0.36.0.8.post620",
]

keywords = ["educational", "simulation", "digital"]

[tool.black]
line-length = 99

[tool.isort]
line_length = 99
lines_after_imports = 2
multi_line_output = 3
indent = 4
default_section = "FIRSTPARTY"
include_trailing_comma = true
known_qt = "PySide6"
known_thirdparty = ["vcd", "utilities", "qtawesome"]
sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "QT",
    "FIRSTPARTY",
    "LOCALFOLDER",
]

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 99
disable = """
    no-member,
    invalid-name,
    duplicate-code,
"""
ignored-modules = """
   pexpect,
   pytest,
   PySide6,
   qtawesome
"""

[tool.flake8]
ignore = ['W503']
max-line-length = 99
exclude = """
    build,
    .venv,
    .nox,
"""