[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "digsim-logic-simulator"
description = "Interactive Digital Logic Simulator"
version = "0.16.0"
authors = [{name = "Fredrik Andersson", email = "freand@gmail.com"}]
maintainers =  [{name = "Fredrik Andersson", email = "freand@gmail.com"}]
readme = "README.md"
license-files = ["LICENSE.md"]
urls = { homepage = "https://github.com/freand76/digsim" }

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
]

requires-python = ">=3.10"
dependencies = [
  "pyvcd==0.4.1",
  "pyside6==6.10.0",
  "pexpect==4.9.0",
  "pydantic==2.12.4",
  "qtawesome==1.4.0",
  "yowasp-yosys==0.59.0.0.post1039",
]

keywords = ["educational", "simulation", "digital"]

[tool.ruff]
line-length = 99
target-version = "py310"

show-fixes = true
output-format = "full"

src = ["src"]
namespace-packages = ["src/digsim"]

[tool.ruff.lint]
# "extend" here adds to the ruff defaults, rather than replacing.
# Q = flake8-quotes, TID = flake8-tidy-imports, I = isort, FA = flake8-future-annotations
extend-select = ["Q", "TID", "I", "FA"]
# E501 = "line too long". Handled by black.
extend-ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "parents"

[tool.ruff.lint.isort]
lines-after-imports = 2

known-third-party = [
    "pexpect",
    "pytest",
    "pyvcd",
    "qtawesome",
    "yowasp-yosys",
]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "PySide6",
    "pyqtgraph",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.isort.sections]
"PySide6" = ["PySide6"]
"pyqtgraph" = ["pyqtgraph"]
