[metadata]
name = digsim-logic-simulator
author = Fredrik Andersson
author_email = freand@gmail.com
url = https://github.com/freand76/digsim
description = Digital Logic Simulator
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause Clear License
license_file = LICENSE.md
project_urls =
    Tracker = https://github.com/freand76/digsim/issues
    Source = https://github.com/freand76/digsim
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir =
    = src
packages = find_namespace:
zip_safe = False
include_package_data = True
python_requires = >=3.7
install_requires =
    pyvcd==0.3.0

[options.packages.find]
where = src

[options.extras_require]
app =
    pyside6>=6.4.0
    qtawesome
